desktop popup added, need to fix overflow

--- a/style.css
+++ b/style.css
@@ -227,6 +227,72 @@ main {
 }
 
 .hidden {
-  transform: translateY(99px);
+  transform: translateY(199px);
   opacity: 0;
+}
+
+/* Media querries */
+
+@media (min-width: 800px) {
+  main {
+    max-width: 650px;
+    flex-direction: row;
+    align-items: center;
+    overflow: visible;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
+
+  .main__image {
+    min-height: 100%;
+    width: 100%;
+    background: url(images/drawers.jpg);
+    background-size: cover;
+  }
+
+  .main__image img {
+    display: none;
+  }
+
+  .info__section {
+    margin-top: 0;
+    margin-bottom: 1rem;
+  }
+
+  /* Large screen popup */
+
+  .popup {
+    bottom: 35%;
+    right: -4.55rem;
+    width: max-content;
+    padding: 1rem 2.2rem;
+    border-radius: 0.7rem;
+    transform: scale(1);
+    transition: transform 0.1s cubic-bezier(0.14, 0.29, 0.86, 1.45),
+      opacity 0.2s;
+    -webkit-box-shadow: 3px 3px 5px 1px var(--clr-primary-400);
+    -moz-box-shadow: 3px 3px 5px 1px var(--clr-primary-400);
+    box-shadow: 3px 3px 5px 1px var(--clr-primary-400);
+  }
+
+  .popup button {
+    display: none;
+  }
+
+  .popup::after {
+    content: "";
+    position: absolute;
+    bottom: -13px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: 111;
+    background-color: var(--clr-primary-600);
+    height: 14px;
+    width: 26px;
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    transform: rotate(180deg);
+  }
 }
